--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html>
+<!--DESKTOP-->
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>COLMAR ACADEMY</title>
+    <link href="resources\css\reset.css" type="text/css" rel="stylesheet">
+    <link href="resources\css\style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
 
-    <!--HEADER/LOGO/BANNER/MAIN IMAGE/FLEXCONTAINER-->
+    <!--HEADER/LOGO/NAV-->
+
+    <img src="resources\images\ic-logo.svg" alt="Logo"/>
+    <h1>COLMAR ACADEMY</h1>
+      <nav>
+        <a>On campus</a>
+        <a>Online</a>
+        <a>For companies</a>
+        <a>Sign in</a>
+      </nav>
+
+    <!--BANNER ONE/FLEXCONTAINER-->
+
+    <img src="resources\images\banner.jpg" alt=""/>
+
+    <!--BANNER TWO/FLEXCONTAINER-->
+
+    <img src="resources\images\information-main.jpg" alt=""/>
+
+    <img src="resources\images\information-orientation.jpg" alt=""/>
+    <img src="resources\images\information-campus.jpg" alt=""/>
+    <img src="resources\images\information-guest-lecture.jpg" alt=""/>
+
+    <!--IMAGE GRID/FLEXCONTAINER-->
+
+    <img src="resources\images\course-software.jpg" alt=""/>
+    <img src="resources\images\course-computer-art.jpg" alt=""/>
+    <img src="resources\images\course-design.jpg" alt=""/>
+    <img src="resources\images\course-data.jpg" alt=""/>
+    <img src="resources\images\course-business.jpg" alt=""/>
+    <img src="resources\images\course-marketing.jpg" alt=""/>
+
+    <!--VIDEO BANNER/FLEXCONTAINER-->
+
+    <video src="resources\videos\thesis.mp4" alt=""/>
+
+    <img src="resources\images\thesis-fisma.jpg" alt=""/>
+    <img src="resources\images\thesis-now-and-then.jpg" alt=""/>
+
 
   </body>
+
+    <!--FOOTER-->
+
+
+
+  <footer>
+
+  <p>&copy; 2016 Colmar Academy. All rights reserved</p>
+  <p>Terms Privacy</p>
+
+  </footer>
+
 </html>
