--- a/index.html
+++ b/index.html
@@ -22,38 +22,77 @@
 
     <!--BANNER ONE/FLEXCONTAINER-->
 
-    <img src="resources\images\banner.jpg" alt=""/>
+  <div class="firstimage">
+    <img src="resources\images\banner.jpg" alt="" />
+    <h1>Learn something new everyday</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Start here</p>
+  </div>
 
     <!--BANNER TWO/FLEXCONTAINER-->
 
+<div class="secondimage">
+  <div class="mainimage">
     <img src="resources\images\information-main.jpg" alt=""/>
+    <h2>It doesn't hurt to keep practicing</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p>Emanuel, Sr Strategist at Hiring.com</p>
+  </div>
 
+<div class="threeimages">
+ <div class="subimages">
     <img src="resources\images\information-orientation.jpg" alt=""/>
+    <h3>Orientation date</h3>
+    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+    <a>Read more</a>
     <img src="resources\images\information-campus.jpg" alt=""/>
+    <h3>Our campus</h3>
+    <p>Find which campus is close by you</p>
+    <a>Read more</a>
     <img src="resources\images\information-guest-lecture.jpg" alt=""/>
+    <h3>Our guest lecture</h3>
+    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+    <a>Read more</a>
+  </div>
+</div>
+
+</div>
 
     <!--IMAGE GRID/FLEXCONTAINER-->
-
+<div class="">
     <img src="resources\images\course-software.jpg" alt=""/>
     <img src="resources\images\course-computer-art.jpg" alt=""/>
     <img src="resources\images\course-design.jpg" alt=""/>
+    <h2>Software engineering</h2><p>COURSES Web Development, Mobile Development, iOT, APIs </p><h2>Computer art</h2><p>COURSES Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p><h2>Design</h2><p>COURSES User Experience Design, User Research, Visual Design</p>
     <img src="resources\images\course-data.jpg" alt=""/>
     <img src="resources\images\course-business.jpg" alt=""/>
     <img src="resources\images\course-marketing.jpg" alt=""/>
+    <h2>Data</h2><p>COURSES Data Science, Big Data, SQL, Data Visualization</p><h2>Business</h2><p>COURSES Product Development, Business Devlopment, Startup</p><h2>Marketing</h2><p>COURSES Analytics, Content Marketing, Mobile Marketing</p>
+</div>
+
 
     <!--VIDEO BANNER/FLEXCONTAINER-->
 
-    <video src="resources\videos\thesis.mp4" alt=""/>
 
+    <h2>Thesis exhibit</h2>
+<div class="videobanner">
+    <video controls loop autoplay>
+      <source src="resources\videos\thesis.mp4" type="video/mp4">
+      Your video does not support the video tag.
+    </video>
+    <h3>Reimagine urban</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <img src="resources\images\thesis-fisma.jpg" alt=""/>
+    <h3>Fisma: Design and Prototype</h3>
+    <p>Designer showcase of new prototype product</p>
     <img src="resources\images\thesis-now-and-then.jpg" alt=""/>
+    <h3>Now and then</h3>
+    <p>Research study about New York</p>
 
-
+</div>
   </body>
 
     <!--FOOTER-->
-
-
 
   <footer>
 
