added content & worked on banner1

--- a/index.html
+++ b/index.html
@@ -10,24 +10,31 @@
   <body>
 
     <!--HEADER/LOGO/NAV-->
-
-    <img src="resources\images\ic-logo.svg" alt="Logo"/>
-    <h1>COLMAR ACADEMY</h1>
-      <nav>
-        <a>On campus</a>
-        <a>Online</a>
-        <a>For companies</a>
-        <a>Sign in</a>
-      </nav>
+  <div class="header">
+    <span>
+      <img src="resources\images\ic-logo.svg" alt="Logo"/>
+      <h1>COLMAR ACADEMY</h1>
+    </span>
+    <nav>
+      <a>On campus</a>
+      <a>Online</a>
+      <a>For companies</a>
+      <a>Sign in</a>
+    </nav>
+  </div>
 
     <!--BANNER ONE/FLEXCONTAINER-->
 
   <div class="firstimage">
-    <img src="resources\images\banner.jpg" alt="" />
-    <h1>Learn something new everyday</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-    <p>Start here</p>
-  </div>
+      <img src="resources\images\banner.jpg" alt="" />
+   <div class="bannerone">
+      <h1>Learn something new everyday</h1>
+    </br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    </br>
+      <button type"button">Start here</button>
+   </div>
+ </div>
 
     <!--BANNER TWO/FLEXCONTAINER-->
 
@@ -59,7 +66,8 @@
 </div>
 
     <!--IMAGE GRID/FLEXCONTAINER-->
-<div class="">
+
+<div class="imagegrid">
     <img src="resources\images\course-software.jpg" alt=""/>
     <img src="resources\images\course-computer-art.jpg" alt=""/>
     <img src="resources\images\course-design.jpg" alt=""/>
