general changes & footer completed

--- a/index.html
+++ b/index.html
@@ -39,30 +39,38 @@
     <!--BANNER TWO/FLEXCONTAINER-->
 
 <div class="secondimage">
-  <div class="mainimage">
     <img src="resources\images\information-main.jpg" alt=""/>
-    <h2>It doesn't hurt to keep practicing</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <p>Emanuel, Sr Strategist at Hiring.com</p>
-  </div>
-
-<div class="threeimages">
- <div class="subimages">
+  <div class="bannertwo">
     <img src="resources\images\information-orientation.jpg" alt=""/>
     <h3>Orientation date</h3>
+    </br>
     <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+    </br>
     <a>Read more</a>
+    </br>
     <img src="resources\images\information-campus.jpg" alt=""/>
     <h3>Our campus</h3>
+    </br>
     <p>Find which campus is close by you</p>
-    <a>Read more</a>
-    <img src="resources\images\information-guest-lecture.jpg" alt=""/>
-    <h3>Our guest lecture</h3>
-    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+    </br>
     <a>Read more</a>
   </div>
 </div>
 
+<div class="secondhalf">
+  <div class="practicing">
+    <h2>It doesn't hurt to keep practicing</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p>Emanuel, Sr Strategist at Hiring.com</p>
+  </div>
+  <div class="bottomhalf">
+    <img src="resources\images\information-guest-lecture.jpg" alt=""/>
+    <h3>Our guest lecture</h3>
+    </br>
+    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+    </br>
+    <a>Read more</a>
+  </div>
 </div>
 
     <!--IMAGE GRID/FLEXCONTAINER-->
@@ -71,7 +79,13 @@
     <img src="resources\images\course-software.jpg" alt=""/>
     <img src="resources\images\course-computer-art.jpg" alt=""/>
     <img src="resources\images\course-design.jpg" alt=""/>
-    <h2>Software engineering</h2><p>COURSES Web Development, Mobile Development, iOT, APIs </p><h2>Computer art</h2><p>COURSES Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p><h2>Design</h2><p>COURSES User Experience Design, User Research, Visual Design</p>
+    <h2>Software engineering</h2>
+    <h2>Computer art</h2>
+    <h2>Design</h2>
+    <p>COURSES</p>
+    <p>COURSES</p>
+    <p>COURSES</p>
+    <p>Web Development, Mobile Development, iOT, APIs </p><p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p><p>User Experience Design, User Research, Visual Design</p>
     <img src="resources\images\course-data.jpg" alt=""/>
     <img src="resources\images\course-business.jpg" alt=""/>
     <img src="resources\images\course-marketing.jpg" alt=""/>
@@ -81,8 +95,9 @@
 
     <!--VIDEO BANNER/FLEXCONTAINER-->
 
-
+  <div class="videotitle">
     <h2>Thesis exhibit</h2>
+  </div>
 <div class="videobanner">
     <video controls loop autoplay>
       <source src="resources\videos\thesis.mp4" type="video/mp4">
@@ -102,10 +117,12 @@
 
     <!--FOOTER-->
 
-  <footer>
+<footer>
 
+<div class="Colmar">
   <p>&copy; 2016 Colmar Academy. All rights reserved</p>
   <p>Terms Privacy</p>
+</div>
 
   </footer>
 
