--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="header">
     <span>
       <img src="resources\images\ic-logo.svg" alt="Logo"/>
-      <h1>COLMAR ACADEMY</h1>
+      <span><h1>COLMAR ACADEMY</h1></span>
     </span>
     <nav>
       <a>On campus</a>
@@ -103,16 +103,24 @@
       <source src="resources\videos\thesis.mp4" type="video/mp4">
       Your video does not support the video tag.
     </video>
+        <div class="Fisma">
+      <img src="resources\images\thesis-fisma.jpg" alt=""/>
+      <h3>Fisma: Design and Prototype</h3>
+    </br>
+      <p>Designer showcase of new prototype product</p>
+    </div>
+    <div class="Now">
+      <img src="resources\images\thesis-now-and-then.jpg" alt=""/>
+      <h3>Now and then</h3>
+    </br>
+      <p>Research study about New York</p>
+    </div>
+  </div>
+  <div class="Reimagine">
     <h3>Reimagine urban</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <img src="resources\images\thesis-fisma.jpg" alt=""/>
-    <h3>Fisma: Design and Prototype</h3>
-    <p>Designer showcase of new prototype product</p>
-    <img src="resources\images\thesis-now-and-then.jpg" alt=""/>
-    <h3>Now and then</h3>
-    <p>Research study about New York</p>
-
 </div>
+
   </body>
 
     <!--FOOTER-->
