--- a/index.html
+++ b/index.html
@@ -76,22 +76,49 @@
     <!--IMAGE GRID/FLEXCONTAINER-->
 
 <div class="imagegrid">
-    <img src="resources\images\course-software.jpg" alt=""/>
-    <img src="resources\images\course-computer-art.jpg" alt=""/>
-    <img src="resources\images\course-design.jpg" alt=""/>
-    <h2>Software engineering</h2>
-    <h2>Computer art</h2>
-    <h2>Design</h2>
-    <p>COURSES</p>
-    <p>COURSES</p>
-    <p>COURSES</p>
-    <p>Web Development, Mobile Development, iOT, APIs </p><p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p><p>User Experience Design, User Research, Visual Design</p>
-    <img src="resources\images\course-data.jpg" alt=""/>
-    <img src="resources\images\course-business.jpg" alt=""/>
-    <img src="resources\images\course-marketing.jpg" alt=""/>
-    <h2>Data</h2><p>COURSES Data Science, Big Data, SQL, Data Visualization</p><h2>Business</h2><p>COURSES Product Development, Business Devlopment, Startup</p><h2>Marketing</h2><p>COURSES Analytics, Content Marketing, Mobile Marketing</p>
+   <div class="grid-container">
+     <div class="grid-div">
+      <img class="imageclass" src="resources\images\course-software.jpg"/>
+      <h2 class="imageheader">Software engineering</h2>
+      <p class="image-courses">COURSES</p>
+      <p class="image-p">Web Development, Mobile Development, iOT, APIs </p>
+    </div>
+    <div>
+    <img class="imageclass" src="resources\images\course-computer-art.jpg"/>
+    <h2 class="imageheader">Computer art</h2>
+    <p class="image-courses">COURSES</p>
+    <p class="image-p">Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+   </div>
+   <div>
+    <img class="imageclass" src="resources\images\course-design.jpg"/>
+    <h2 class="imageheader">Design</h2>
+    <p class="image-courses">COURSES</p>
+    <p class="image-p">User Experience Design, User Research, Visual Design</p>
+   </div>
+  </div>
 </div>
-
+<div class="imagegrid">
+  <div class="grid-container">
+    <div>
+    <img class="imageclass" src="resources\images\course-data.jpg"/>
+    <h2 class="imageheader">Data</h2>
+    <p class="image-courses">COURSES</p>
+    <p class="image-p">Data Science, Big Data, SQL, Data Visualization</p>
+    </div>
+    <div>
+    <img class="imageclass" src="resources\images\course-business.jpg"/>
+    <h2 class="imageheader">Business</h2>
+    <p class="image-courses">COURSES</p>
+    <p class="image-p">Product Development, Business Devlopment, Startup</p>
+    </div>
+    <div>
+    <img class="imageclass" src="resources\images\course-marketing.jpg"/>
+    <h2 class="imageheader">Marketing</h2>
+    <p class="image-courses">COURSES</p>
+    <p class="image-p"> Analytics, Content Marketing, Mobile Marketing</p>
+    </div>
+  </div>
+</div>
 
     <!--VIDEO BANNER/FLEXCONTAINER-->
 
@@ -103,19 +130,25 @@
       <source src="resources\videos\thesis.mp4" type="video/mp4">
       Your video does not support the video tag.
     </video>
-        <div class="Fisma">
-      <img src="resources\images\thesis-fisma.jpg" alt=""/>
+    <div class="videoflexcont-item">
+      <div class="Fisma-img">
+        <img src="resources\images\thesis-fisma.jpg" alt=""/>
+      </div>
+      <div class="Fisma-cap">
       <h3>Fisma: Design and Prototype</h3>
     </br>
       <p>Designer showcase of new prototype product</p>
     </div>
-    <div class="Now">
+    <div class="Now-img">
       <img src="resources\images\thesis-now-and-then.jpg" alt=""/>
+    <div class="Now-cap">
       <h3>Now and then</h3>
     </br>
       <p>Research study about New York</p>
     </div>
+    </div>
   </div>
+</div>
   <div class="Reimagine">
     <h3>Reimagine urban</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
