Reimagine Done & still working on rest of video banner

--- a/index.html
+++ b/index.html
@@ -131,27 +131,32 @@
       Your video does not support the video tag.
     </video>
     <div class="videoflexcont-item">
-      <div class="Fisma-img">
-        <img src="resources\images\thesis-fisma.jpg" alt=""/>
+      <div class="FismaNowImages">
+        <div class="Fisma-img">
+          <img src="resources\images\thesis-fisma.jpg" alt=""/>
+        </div>
+        <div class="Now-img">
+          <img src="resources\images\thesis-now-and-then.jpg" alt=""/>
+        </div>
       </div>
-      <div class="Fisma-cap">
-      <h3>Fisma: Design and Prototype</h3>
-    </br>
-      <p>Designer showcase of new prototype product</p>
-    </div>
-    <div class="Now-img">
-      <img src="resources\images\thesis-now-and-then.jpg" alt=""/>
-    <div class="Now-cap">
-      <h3>Now and then</h3>
-    </br>
-      <p>Research study about New York</p>
+      <div class="FismaNowText">
+        <div class="Fisma-cap">
+        <h3>Fisma: Design and Prototype</h3>
+      </br>
+        <p>Designer showcase of new prototype product</p>
+      </div>
+      <div class="Now-cap">
+        <h3>Now and then</h3>
+      </br>
+        <p>Research study about New York</p>
+      </div>
     </div>
     </div>
   </div>
 </div>
   <div class="Reimagine">
     <h3>Reimagine urban</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
 </div>
 
   </body>
