Working on 2nd banner

--- a/index.html
+++ b/index.html
@@ -40,21 +40,29 @@
 
 <div class="secondimage">
     <img src="resources\images\information-main.jpg" alt=""/>
-  <div class="bannertwo">
-    <img src="resources\images\information-orientation.jpg" alt=""/>
-    <h3>Orientation date</h3>
-    </br>
-    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-    </br>
-    <a>Read more</a>
-    </br>
-    <img src="resources\images\information-campus.jpg" alt=""/>
-    <h3>Our campus</h3>
-    </br>
-    <p>Find which campus is close by you</p>
-    </br>
-    <a>Read more</a>
-  </div>
+    <div class="bannertwo">
+      <div class="orientation-image">
+        <img src="resources\images\information-orientation.jpg" alt=""/>
+      </div>
+      <div class="orientation-cap">
+        <h3>Orientation date</h3>
+        </br>
+        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+        </br>
+        <a>Read more</a>
+        </br>
+      </div>
+      <div class="Campus-image">
+        <img src="resources\images\information-campus.jpg" alt=""/>
+      </div>
+      <div class="campus-cap">
+        <h3>Our campus</h3>
+        </br>
+        <p>Find which campus is close by you</p>
+        </br>
+        <a>Read more</a>
+      </div>
+    </div>
 </div>
 
 <div class="secondhalf">
@@ -63,8 +71,10 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <p>Emanuel, Sr Strategist at Hiring.com</p>
   </div>
-  <div class="bottomhalf">
+  <div lass="guest-image">
     <img src="resources\images\information-guest-lecture.jpg" alt=""/>
+  </div>
+  <div class="guest-cap">
     <h3>Our guest lecture</h3>
     </br>
     <p>Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -131,26 +141,23 @@
       Your video does not support the video tag.
     </video>
     <div class="videoflexcont-item">
-      <div class="FismaNowImages">
         <div class="Fisma-img">
           <img src="resources\images\thesis-fisma.jpg" alt=""/>
         </div>
-        <div class="Now-img">
-          <img src="resources\images\thesis-now-and-then.jpg" alt=""/>
-        </div>
-      </div>
-      <div class="FismaNowText">
         <div class="Fisma-cap">
         <h3>Fisma: Design and Prototype</h3>
       </br>
         <p>Designer showcase of new prototype product</p>
       </div>
-      <div class="Now-cap">
-        <h3>Now and then</h3>
-      </br>
-        <p>Research study about New York</p>
+        <div class="Now-img">
+          <img src="resources\images\thesis-now-and-then.jpg" alt=""/>
+        </div>
+        <div class="Now-cap">
+          <h3>Now and then</h3>
+        </br>
+          <p>Research study about New York</p>
+        </div>
       </div>
-    </div>
     </div>
   </div>
 </div>
