--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="header">
     <span>
       <img src="resources\images\ic-logo.svg" alt="Logo"/>
-      <span><h1>COLMAR ACADEMY</h1></span>
+      <span class="title">COLMAR</span><span class="title2">ACADEMY</span>
     </span>
     <nav>
       <a>On campus</a>
@@ -41,6 +41,7 @@
 <div class="secondimage">
     <img src="resources\images\information-main.jpg" alt=""/>
     <div class="bannertwo">
+    <div class="orientation-container">
       <div class="orientation-image">
         <img src="resources\images\information-orientation.jpg" alt=""/>
       </div>
@@ -52,6 +53,8 @@
         <a>Read more</a>
         </br>
       </div>
+    </div>
+    <div class="campus-container">
       <div class="Campus-image">
         <img src="resources\images\information-campus.jpg" alt=""/>
       </div>
@@ -63,6 +66,7 @@
         <a>Read more</a>
       </div>
     </div>
+    </div>
 </div>
 
 <div class="secondhalf">
@@ -71,6 +75,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <p>Emanuel, Sr Strategist at Hiring.com</p>
   </div>
+  <div class="guest-container">
   <div lass="guest-image">
     <img src="resources\images\information-guest-lecture.jpg" alt=""/>
   </div>
@@ -81,6 +86,7 @@
     </br>
     <a>Read more</a>
   </div>
+</div>
 </div>
 
     <!--IMAGE GRID/FLEXCONTAINER-->
