--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!--BANNER TWO/FLEXCONTAINER-->
 
 <div class="secondimage">
-    <img src="resources\images\information-main.jpg" alt=""/>
+    <img src="resources\images\information-main.jpg" class="information-image"/>
     <div class="bannertwo">
     <div class="orientation-container">
       <div class="orientation-image">
@@ -47,11 +47,8 @@
       </div>
       <div class="orientation-cap">
         <h3>Orientation date</h3>
-        </br>
         <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-        </br>
         <a>Read more</a>
-        </br>
       </div>
     </div>
     <div class="campus-container">
@@ -60,9 +57,7 @@
       </div>
       <div class="campus-cap">
         <h3>Our campus</h3>
-        </br>
         <p>Find which campus is close by you</p>
-        </br>
         <a>Read more</a>
       </div>
     </div>
@@ -81,9 +76,7 @@
   </div>
   <div class="guest-cap">
     <h3>Our guest lecture</h3>
-    </br>
     <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-    </br>
     <a>Read more</a>
   </div>
 </div>
@@ -142,8 +135,8 @@
     <h2>Thesis exhibit</h2>
   </div>
 <div class="videobanner">
-    <video controls loop autoplay>
-      <source src="resources\videos\thesis.mp4" type="video/mp4">
+    <video controls loop autoplay class="videosize">
+      <source src="resources\videos\thesis.mp4" type="video/mp4" >
       Your video does not support the video tag.
     </video>
     <div class="videoflexcont-item">
@@ -164,9 +157,10 @@
           <p>Research study about New York</p>
         </div>
       </div>
-    </div>
-  </div>
+   </div>
+ </div>
 </div>
+
   <div class="Reimagine">
     <h3>Reimagine urban</h3>
     <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
