Mobile Header Complete

--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@
   </head>
   <body>
 
-    <!--HEADER/LOGO/NAV-->
+    <!--HEADER/LOGO/NAV/ for desktop-->
   <div class="header">
     <span>
-      <img src="resources\images\ic-logo.svg" alt="Logo"/>
+      <img src="resources\images\ic-logo.svg" alt="Logo" class="header-img"/>
       <span class="title">COLMAR</span><span class="title2">ACADEMY</span>
     </span>
-    <nav>
+    <nav class="header-nav">
       <a>On campus</a>
       <a>Online</a>
       <a>For companies</a>
       <a>Sign in</a>
     </nav>
   </div>
+
+    <!--HEADER/LOGO/NAV/ for mobile-->
+
+    <div class="header2">
+        <img src="resources\images\ic-logo.svg" alt="Logo"/>
+        <img src="resources\images\ic-on-campus.svg" alt="Logo"/>
+        <img src="resources\images\ic-online.svg" alt="Logo"/>
+        <img src="resources\images\ic-login.svg" alt="Logo"/>
+    </div>
 
     <!--BANNER ONE/FLEXCONTAINER-->
 
