Mobile Video Banner Complete

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </div>
 </div>
 
-    <!--VIDEO BANNER/FLEXCONTAINER-->
+    <!--VIDEO BANNER/FLEXCONTAINER for desktop-->
 
   <div class="videotitle">
     <h2>Thesis exhibit</h2>
@@ -175,6 +175,18 @@
     <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
 </div>
 
+<!--VIDEO BANNER/FLEXCONTAINER for mobile-->
+
+<div class="videotitle2">
+  <h2>Thesis exhibit</h2>
+</div>
+<div class="videobanner2">
+  <video controls loop autoplay class="videosize2">
+    <source src="resources\videos\thesis.mp4" type="video/mp4" >
+    Your video does not support the video tag.
+  </video>
+</div>
+
   </body>
 
     <!--FOOTER-->
@@ -183,7 +195,7 @@
 
 <div class="Colmar">
   <p>&copy; 2016 Colmar Academy. All rights reserved</p>
-  <p>Terms Privacy</p>
+  <p class="Terms">Terms Privacy</p>
 </div>
 
   </footer>
