Mobile Image Grid Banner Complete

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
 </div>
 
-    <!--IMAGE GRID/FLEXCONTAINER-->
+    <!--IMAGE GRID/FLEXCONTAINER for desktop-->
 
 <div class="imagegrid">
    <div class="grid-container">
@@ -137,6 +137,16 @@
     </div>
   </div>
 </div>
+
+<!--IMAGE GRID/FLEXCONTAINER for mobile-->
+
+<h1 class="start-learning">Start learning</h1>
+<h2 class="imageheader2">Software engineering</h2>
+<h2 class="imageheader2">Computer art</h2>
+<h2 class="imageheader2">Design</h2>
+<h2 class="imageheader2">Data</h2>
+<h2 class="imageheader2">Business</h2>
+<h2 class="imageheader2">Marketing</h2>
 
     <!--VIDEO BANNER/FLEXCONTAINER for desktop-->
 
