Mobile Banner 1 Complete

--- a/index.html
+++ b/index.html
@@ -32,20 +32,33 @@
         <img src="resources\images\ic-login.svg" alt="Logo"/>
     </div>
 
-    <!--BANNER ONE/FLEXCONTAINER-->
+    <!--BANNER ONE/FLEXCONTAINER for desktop-->
 
-  <div class="firstimage">
+  <div class="firstimage1">
       <img src="resources\images\banner.jpg" alt="" />
    <div class="bannerone">
       <h1>Learn something new everyday</h1>
     </br>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
     </br>
-      <button type"button">Start here</button>
+      <button class="button1" type"button">Start here</button>
    </div>
  </div>
 
-    <!--BANNER TWO/FLEXCONTAINER-->
+<!--BANNER ONE/FLEXCONTAINER for mobile-->
+
+<div class="firstimage2">
+  <img src="resources\images\banner.jpg"/>
+  <div class="bannerone2">
+     <h1>Learn something new everyday</h1>
+   </br>
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+   </br>
+     <button class="button2" type"button">Start here</button>
+  </div>
+</div>
+
+    <!--BANNER TWO/FLEXCONTAINER for desktop-->
 
 <div class="secondimage">
     <img src="resources\images\information-main.jpg" class="information-image"/>
@@ -80,7 +93,7 @@
     <p>Emanuel, Sr Strategist at Hiring.com</p>
   </div>
   <div class="guest-container">
-  <div lass="guest-image">
+  <div class="guest-image">
     <img src="resources\images\information-guest-lecture.jpg" alt=""/>
   </div>
   <div class="guest-cap">
@@ -90,6 +103,28 @@
   </div>
 </div>
 </div>
+
+<!--BANNER TWO/FLEXCONTAINER for mobile-->
+
+<img src="resources\images\information-orientation-mobile.jpg"/>
+<div class="orientation-cap2">
+<h3>Orientation date</h3>
+<p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+<a>Read more</a>
+</div>
+<img src="resources\images\information-campus-mobile.jpg"/>
+<div class="campus-cap2">
+  <h3>Our campus</h3>
+  <p>Find which campus is close by you</p>
+  <a>Read more</a>
+</div>
+<img src="resources\images\information-guest-lecture-mobile.jpg"/>
+<div class="guest-cap2">
+  <h3>Our guest lecture</h3>
+  <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+  <a>Read more</a>
+</div>
+
 
     <!--IMAGE GRID/FLEXCONTAINER for desktop-->
 
