--- a/index.html
+++ b/index.html
@@ -106,25 +106,26 @@
 
 <!--BANNER TWO/FLEXCONTAINER for mobile-->
 
-<img src="resources\images\information-orientation-mobile.jpg"/>
-<div class="orientation-cap2">
-<h3>Orientation date</h3>
-<p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-<a>Read more</a>
-</div>
-<img src="resources\images\information-campus-mobile.jpg"/>
-<div class="campus-cap2">
-  <h3>Our campus</h3>
-  <p>Find which campus is close by you</p>
+<div class="bannertwo2">
+  <img src="resources\images\information-orientation-mobile.jpg"/>
+  <div class="orientation-cap2">
+  <h3>Orientation date</h3>
+  <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
   <a>Read more</a>
+  </div>
+  <img src="resources\images\information-campus-mobile.jpg"/>
+  <div class="campus-cap2">
+    <h3>Our campus</h3>
+    <p>Find which campus is close by you</p>
+    <a>Read more</a>
+  </div>
+  <img src="resources\images\information-guest-lecture-mobile.jpg"/>
+  <div class="guest-cap2">
+    <h3>Our guest lecture</h3>
+    <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+    <a>Read more</a>
+  </div>
 </div>
-<img src="resources\images\information-guest-lecture-mobile.jpg"/>
-<div class="guest-cap2">
-  <h3>Our guest lecture</h3>
-  <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-  <a>Read more</a>
-</div>
-
 
     <!--IMAGE GRID/FLEXCONTAINER for desktop-->
 
