--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <!--BANNER ONE/FLEXCONTAINER for desktop-->
-
+<div class="banner-one">
   <div class="firstimage1">
       <img src="resources\images\banner.jpg" alt="" />
    <div class="bannerone">
@@ -44,6 +44,7 @@
       <button class="button1" type"button">Start here</button>
    </div>
  </div>
+</div>
 
 <!--BANNER ONE/FLEXCONTAINER for mobile-->
 
@@ -63,6 +64,7 @@
 <div class="secondimage">
     <img src="resources\images\information-main.jpg" class="information-image"/>
     <div class="bannertwo">
+    <div class="banner-two-containers">
     <div class="orientation-container">
       <div class="orientation-image">
         <img src="resources\images\information-orientation.jpg" alt=""/>
@@ -84,8 +86,10 @@
       </div>
     </div>
     </div>
+  </div>
 </div>
 
+<div class="banner-two-guest">
 <div class="secondhalf">
   <div class="practicing">
     <h2>It doesn't hurt to keep practicing</h2>
@@ -101,6 +105,7 @@
     <p>Join a keynote with Oliver Sack about music in medical treatment</p>
     <a>Read more</a>
   </div>
+</div>
 </div>
 </div>
 
@@ -129,6 +134,7 @@
 
     <!--IMAGE GRID/FLEXCONTAINER for desktop-->
 
+<h1 class="start-learning1">Start learning</h1>
 <div class="imagegrid">
    <div class="grid-container">
      <div class="grid-div">
@@ -176,7 +182,7 @@
 
 <!--IMAGE GRID/FLEXCONTAINER for mobile-->
 
-<h1 class="start-learning">Start learning</h1>
+<h1 class="start-learning2">Start learning</h1>
 <h2 class="imageheader2">Software engineering</h2>
 <h2 class="imageheader2">Computer art</h2>
 <h2 class="imageheader2">Design</h2>
@@ -235,15 +241,23 @@
 
   </body>
 
-    <!--FOOTER-->
+    <!--FOOTER for desktop-->
 
 <footer>
 
-<div class="Colmar">
-  <p>&copy; 2016 Colmar Academy. All rights reserved</p>
-  <p class="Terms">Terms Privacy</p>
+<div class="footer">
+  <div class="Colmar">
+    <p>&copy; 2016 Colmar Academy. All rights reserved</p>
+    <p class="Terms">Terms Privacy</p>
+  </div>
 </div>
 
-  </footer>
+  <!--FOOTER for mobile-->
+
+<div class="Colmar2">
+<p>&copy; 2016 Colmar Academy. All rights reserved</p>
+</div>
+
+</footer>
 
 </html>
