Font-family,style,colors added etc

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="header">
     <span>
       <img src="resources\images\ic-logo.svg" alt="Logo" class="header-img"/>
-      <span class="title">COLMAR</span><span class="title2">ACADEMY</span>
+      <span class="title">colmar</span><span class="title2">academy</span>
     </span>
     <nav class="header-nav">
       <a>On campus</a>
